# AntarcticResearch

./: .gitattributes  .gitignore  .gitmodules  .~lock.Vessels+in+operation_Nov2024.csv#  README.md  Vessels+in+operation_Nov2024.csv  antarctic_ladder_figure_aggregator.py  check_intervention_prompt_length.py  conversions.py  country_meta_info.py  document_embeddings.py  dump_ocr_texts.py  facilities_analysis.py  figure_aggregator.py  final_report_metrics.py  graph_centrality.py  infrastructure_figures.py  ocr.py  ocr_progress.py  pyproject.toml  report_repeated_ids.py  run_antarctic_db_go_pipeline.py  scopus_figures.py  scrape_final_reports.py  secret_management.py  secrets.example.json  sentence_splitter.py  temp.py  test.ipynb  todo.txt  topic_extraction.py  utils.py  vast_train.py  working_paper_authorship.py
ACTM_Measure_Scraper/: LICENSE  ReadMe.md
Methods/: CountryMentionsAndInterventions.docx  Infrastructure.docx  Measure_Collection.docx  Measure_Idea_Introductions.docx  Ratification_Speed.docx  SCAR_Leadership.docx  ScopusFigures.docx  Topic Introduction.docx  WP_Collaboration_Graph_Centrality_And_Diversity.docx  WP_IP_Authorship_Metrics.docx
antarctic_ladder_metrics/: constants.py  final_report_metrics.py  information_paper_metrics.py  infrastructure_figures.py  measure_wp_introduction.py  ratification_speed.py  scar_leadership_figures.py  topic_introduction.py  working_paper_metrics.py
data/: .gitignore  Facilities_Nov2024.csv  SCAR_Leadership.csv  country_institutions.txt  country_names.txt  country_subunits.txt  data_notes.txt  scopus_export.csv
(+42 files in other folders)
