[project]
name = "antarcticresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "more-itertools>=11.1.0",
    "nltk>=3.9.4",
    "openai>=2.41.0",
    "paddleocr>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.2",
    "pyarrow>=15.0.0",
    "pymupdf>=1.24.0",
    "requests>=2.33.1",
    "thefuzz>=0.22.1",
    "xlrd>=2.0.2",
]
