[project]
name = "antarcticresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "more-itertools>=11.1.0",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "openai>=2.41.0",
    "paddleocr>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.2",
    "pyarrow>=15.0.0",
    "pymupdf>=1.24.0",
    "requests>=2.33.1",
    "scikit-learn>=1.9.0",
    "thefuzz>=0.22.1",
    "fonttools>=4.0.0",
    "xlrd>=2.0.2",
    "xgboost>=3.2.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "datasets>=5.0.0",
]
